# baku-reserve-mvp

./: .env.example  .gitignore  .pylintrc  .spellcheck.yml  .tool-versions  AGENTS.md  CHANGELOG.md  Dockerfile  FORENSIC_REVIEW.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  TESTING.md  TripAdvisor Scrape.csv  app.json  baku_restaurants_tags_v1.csv  baku_tag_taxonomy_v1.csv  browser_automation_demo.js  check_passage.py  docker-compose.yml  enrichphotostemporaryfile.md  mlc_config.json  package-lock.json  package.json  snapshot.txt  starter111.txt  switch-mcp-profile.sh  test_baku_reserve_chrome.js  verify_chrome_mcp.sh
backend/: .env.example  backend_smoketest.sh  clear_all_reservations.sh  full_regression.sh  full_regression_verbose.sh  locustfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_backend_state.sh
backend/app/: accounts.py  api_v1.py  auth.py  autocomplete_endpoint.py  availability.py  backup.py  cache.py  circuit_breaker.py  concierge.py  concierge_cli.py  concierge_search.py  concierge_service.py  concierge_tags.py  concierge_v2_service.py  config.py  contracts.py  deposits.py  embeddings.py  file_lock.py  health.py  input_validation.py  json_utils.py  llm_intent.py  logging_config.py  main.py  metrics.py  openai_async.py  osrm.py  redis_client.py  redis_store.py  request_batcher.py  route_optimizer.py  route_providers.py  schemas.py  scoring.py  seed.py  serializers.py  settings.py  storage.py  traffic_patterns.py  (+4 more)
backend/scripts/: extreme_suite.sh  ingest_concierge_data.py  migrate_json_to_db.py
(+259 files in other folders)
