[project]
name = "baku-reserve-backend"
version = "0.1.0"
description = "Baku Reserve API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.3.3",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.36",
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "PyJWT[crypto]==2.9.0",
    "httpx==0.27.2",
    "sentry-sdk==1.45.1",
    "prometheus-client==0.19.0",
    "structlog==24.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]
extend-exclude = [
    "app/data/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # handled by black
    "B008",  # FastAPI Depends() in defaults is intentional
    "B904",  # HTTPException conversion without 'from' is intentional
    "F841",  # allow unused local variables (may be placeholders or for clarity)
]

[tool.ruff.format]
preview = true
